--- a/Alura.Filmes.App/Alura.Filmes.App.csproj
+++ b/Alura.Filmes.App/Alura.Filmes.App.csproj
@@ -143,9 +143,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\ImgPropriedades.png" />
     <Content Include="Scripts\alurafilmes-cargainicial.sql" />
     <Content Include="Scripts\alurafilmes-estrutura.sql" />
   </ItemGroup>
