--- a/Alura.Filmes.App/Alura.Filmes.App.csproj
+++ b/Alura.Filmes.App/Alura.Filmes.App.csproj
@@ -128,15 +128,21 @@
     <Compile Include="Dados\AtorConfiguration.cs" />
     <Compile Include="Dados\FilmeAtorConfiguration.cs" />
     <Compile Include="Dados\FilmeConfiguration.cs" />
+    <Compile Include="Dados\IdiomaConfiguration.cs" />
     <Compile Include="Extensions\DbContextExtensions.cs" />
     <Compile Include="Migrations\20220105193655_Inicial.cs" />
     <Compile Include="Migrations\20220105193655_Inicial.designer.cs">
       <DependentUpon>20220105193655_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20220107181919_Idioma.cs" />
+    <Compile Include="Migrations\20220107181919_Idioma.designer.cs">
+      <DependentUpon>20220107181919_Idioma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AluraFilmesContextoModelSnapshot.cs" />
     <Compile Include="Negocio\Ator.cs" />
     <Compile Include="Negocio\Filme.cs" />
     <Compile Include="Negocio\FilmeAtor.cs" />
+    <Compile Include="Negocio\Idioma.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
